[gd_scene load_steps=64 format=3 uid="uid://owiltak1cxk8"]

[ext_resource type="PackedScene" uid="uid://dtoeo3xx4wyyp" path="res://presets/gui/StatIndicator.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://4y5ck1nvjs0k" path="res://data/press/splash/splashscreen.png" id="2_u1iab"]
[ext_resource type="Script" uid="uid://dkhibxxh70whn" path="res://sources/gui/Gui.gd" id="3"]
[ext_resource type="Script" uid="uid://v8uc3k2d1ge4" path="res://sources/gui/StatIndicator.gd" id="3_5uo3f"]
[ext_resource type="PackedScene" uid="uid://dml4oic211pyo" path="res://presets/gui/WindowButton.tscn" id="3_sl5jl"]
[ext_resource type="PackedScene" uid="uid://c2q5vtkxo04dp" path="res://presets/gui/ActionBox.tscn" id="4"]
[ext_resource type="Shader" uid="uid://o15mlu64x2t6" path="res://sources/shaders/ControlMask.gdshader" id="4_60kv4"]
[ext_resource type="Texture2D" uid="uid://bxbrk4eng2uhi" path="res://data/graphics/gui/menu/menubar_button.png" id="4_ah7dm"]
[ext_resource type="Theme" uid="uid://dhb6h35g1bk0x" path="res://data/themes/DefaultTheme.tres" id="4_wx5hs"]
[ext_resource type="PackedScene" uid="uid://dphlgrm0elh6y" path="res://presets/gui/chat/Chat.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://b2t8xg8go0vsr" path="res://data/graphics/gui/menu/menubar_button_pressed.png" id="5_fdh06"]
[ext_resource type="Texture2D" uid="uid://en0awq2dkmol" path="res://data/graphics/gui/icon/inventory.png" id="5_ntnop"]
[ext_resource type="Texture2D" uid="uid://c64u7aupfl51j" path="res://data/graphics/gui/icon/chat.png" id="6_2quic"]
[ext_resource type="Texture2D" uid="uid://dfkrqbj411t1p" path="res://data/graphics/gui/menu/menubar_content.png" id="6_mf0sy"]
[ext_resource type="Script" uid="uid://ckrtju7gm6smo" path="res://sources/gui/MenuIndicator.gd" id="6_npwx0"]
[ext_resource type="Script" uid="uid://cbmx23oytd53m" path="res://sources/gui/FloatingWindows.gd" id="7"]
[ext_resource type="Texture2D" uid="uid://dyfc5o4skfkbn" path="res://data/graphics/gui/icon/map.png" id="7_cv35r"]
[ext_resource type="PackedScene" uid="uid://cjgijbfxixe67" path="res://presets/gui/Login.tscn" id="7_lrq68"]
[ext_resource type="PackedScene" uid="uid://c6nwveqo000dl" path="res://presets/gui/Quit.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://d2oyvnoxsg6ky" path="res://data/graphics/gui/icon/emotes.png" id="8_ppxwt"]
[ext_resource type="PackedScene" uid="uid://x1jkhsyls2i4" path="res://presets/gui/Minimap.tscn" id="9_myjuo"]
[ext_resource type="Texture2D" uid="uid://mktipo1pqtnk" path="res://data/graphics/gui/icon/quests.png" id="9_vtuwx"]
[ext_resource type="PackedScene" uid="uid://6pundiwfj5s1" path="res://presets/shaders/HQ4x.tscn" id="10_id8es"]
[ext_resource type="Texture2D" uid="uid://wbwkeclle8dn" path="res://data/graphics/gui/icon/glossary.png" id="10_mq57a"]
[ext_resource type="Texture2D" uid="uid://brc1lvxeku7m4" path="res://data/graphics/gui/icon/settings.png" id="11_17vy0"]
[ext_resource type="PackedScene" uid="uid://bagfvnt2bhttv" path="res://presets/shaders/CRT.tscn" id="11_x7rk2"]
[ext_resource type="Texture2D" uid="uid://cwq5nqa8pyd0i" path="res://data/graphics/gui/icon/skills.png" id="13_h6wc7"]
[ext_resource type="PackedScene" uid="uid://3ldimch2l6rv" path="res://presets/gui/Scrollable.tscn" id="14_xidsc"]
[ext_resource type="PackedScene" uid="uid://b5tdyq8opcs0u" path="res://presets/gui/Settings.tscn" id="16_gapih"]
[ext_resource type="JSON" path="res://data/db/credits.json" id="16_pfh0e"]
[ext_resource type="PackedScene" uid="uid://lkl6f0td76mu" path="res://presets/gui/Notification.tscn" id="17_64u4l"]
[ext_resource type="Script" uid="uid://c32qnr066pqrl" path="res://sources/gui/Sticks.gd" id="18_6nrx4"]
[ext_resource type="Texture2D" uid="uid://dy3mdamfcvd4v" path="res://data/graphics/gui/mobile/background.png" id="18_lb78w"]
[ext_resource type="Script" uid="uid://bkiorsk8ph1x8" path="res://sources/gui/Progress.gd" id="19_v8wo4"]
[ext_resource type="Texture2D" uid="uid://cupywjqxb66ii" path="res://data/graphics/gui/mobile/button.png" id="20_1vdgt"]
[ext_resource type="PackedScene" uid="uid://tqcjqyaicaol" path="res://presets/gui/contexts/ContextMenuV.tscn" id="20_px3po"]
[ext_resource type="PackedScene" uid="uid://cppc7wshwpqof" path="res://presets/gui/PickUp.tscn" id="21_5ivxk"]
[ext_resource type="PackedScene" uid="uid://ds4k8qrgo3ko3" path="res://presets/gui/Loading.tscn" id="22_cg00p"]
[ext_resource type="Texture2D" uid="uid://devqmk12ra1pf" path="res://data/graphics/gui/mobile/buttonY.png" id="22_v5bsw"]
[ext_resource type="Texture2D" uid="uid://k02ws8i1amnb" path="res://data/graphics/gui/mobile/buttonX.png" id="23_8ulos"]
[ext_resource type="Texture2D" uid="uid://cit8myij7ugwy" path="res://data/graphics/gui/mobile/buttonY_pressed.png" id="23_veq0v"]
[ext_resource type="PackedScene" uid="uid://bgvr3t4hmbkny" path="res://presets/gui/Dialogue.tscn" id="24_fqnq4"]
[ext_resource type="Texture2D" uid="uid://5fam1c22ucqh" path="res://data/graphics/gui/mobile/buttonB.png" id="24_idf5b"]
[ext_resource type="Texture2D" uid="uid://c06gr2x25n6vt" path="res://data/graphics/gui/mobile/buttonA.png" id="25_6cklw"]
[ext_resource type="Texture2D" uid="uid://rty5s2v4s24x" path="res://data/graphics/gui/mobile/buttonX_pressed.png" id="25_8t8bb"]
[ext_resource type="PackedScene" uid="uid://bxstccebg2b32" path="res://presets/gui/MessageBox.tscn" id="25_tem4r"]
[ext_resource type="PackedScene" uid="uid://h70yw73rukc0" path="res://presets/gui/ButtonBox.tscn" id="26_plhfr"]
[ext_resource type="Texture2D" uid="uid://ddx5khysp6252" path="res://data/graphics/gui/mobile/buttonB_pressed.png" id="27_rgxqc"]
[ext_resource type="Texture2D" uid="uid://dsj3d0a61n701" path="res://data/graphics/gui/mobile/buttonL.png" id="28_k5lnh"]
[ext_resource type="Texture2D" uid="uid://bffqij77vx5xq" path="res://data/graphics/gui/mobile/buttonL_pressed.png" id="29_5sssi"]
[ext_resource type="Texture2D" uid="uid://dm3mk222t2o2e" path="res://data/graphics/gui/mobile/buttonA_pressed.png" id="29_ioa8a"]
[ext_resource type="Texture2D" uid="uid://bi10nswp0xmdd" path="res://data/graphics/gui/mobile/buttonR.png" id="30_gfxfv"]
[ext_resource type="Texture2D" uid="uid://b8y1uu7yv8w2p" path="res://data/graphics/gui/mobile/buttonR_pressed.png" id="31_udatq"]
[ext_resource type="PackedScene" uid="uid://dhdq88so6g3yh" path="res://presets/gui/Stats.tscn" id="35_d1kq3"]
[ext_resource type="PackedScene" uid="uid://u31xl3ap3wd8" path="res://presets/gui/Inventory.tscn" id="35_j05ha"]
[ext_resource type="PackedScene" uid="uid://bmsbt0owg4j86" path="res://presets/gui/Emote.tscn" id="37_v7lrk"]
[ext_resource type="PackedScene" uid="uid://b5jgfu2dukotm" path="res://presets/gui/Skill.tscn" id="38_ompay"]
[ext_resource type="PackedScene" uid="uid://b8frfkv2y8x6" path="res://presets/gui/RespawnWindow.tscn" id="44_7o5pa"]
[ext_resource type="PackedScene" uid="uid://duqpp1dik8h8h" path="res://presets/gui/Character.tscn" id="49_78q3w"]
[ext_resource type="PackedScene" uid="uid://dolxuw03u60eo" path="res://presets/gui/Progress.tscn" id="54_112vu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wjdwk"]
shader = ExtResource("4_60kv4")
shader_parameter/progress = 0.0
shader_parameter/inverted = true

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hg7ie"]
texture = ExtResource("4_ah7dm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w48pk"]
texture = ExtResource("5_fdh06")

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("3")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_u1iab")
expand_mode = 1

[node name="Overlay" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("4_wx5hs")
theme_override_constants/margin_left = 19
theme_override_constants/margin_top = 19
theme_override_constants/margin_right = 19
theme_override_constants/margin_bottom = 19

[node name="VSections" type="VBoxContainer" parent="Overlay"]
layout_mode = 2

[node name="Indicators" type="HBoxContainer" parent="Overlay/VSections"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
alignment = 1

[node name="Stat" type="Control" parent="Overlay/VSections/Indicators"]
visible = false
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 1
script = ExtResource("3_5uo3f")

[node name="StatContent" parent="Overlay/VSections/Indicators/Stat" instance=ExtResource("2")]
layout_mode = 0
offset_right = 273.0
offset_bottom = 61.0
size_flags_horizontal = 2
size_flags_vertical = 0
mouse_filter = 2
script = null

[node name="StatButton" type="TextureButton" parent="Overlay/VSections/Indicators/Stat"]
custom_minimum_size = Vector2(62, 61)
layout_mode = 0
offset_right = 62.0
offset_bottom = 61.0
size_flags_horizontal = 10
size_flags_vertical = 0

[node name="Info" type="Control" parent="Overlay/VSections/Indicators"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="Notification" parent="Overlay/VSections/Indicators/Info" instance=ExtResource("17_64u4l")]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -250.0
offset_top = -19.0
offset_right = 250.0
offset_bottom = 17.0

[node name="PickUp" parent="Overlay/VSections/Indicators/Info" instance=ExtResource("21_5ivxk")]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = -61.0
offset_top = 29.0
offset_right = 61.0
offset_bottom = 91.0
grow_horizontal = 2
mouse_filter = 1

[node name="Menu" type="Control" parent="Overlay/VSections/Indicators"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 1
script = ExtResource("6_npwx0")

[node name="MenuContent" type="TextureRect" parent="Overlay/VSections/Indicators/Menu"]
material = SubResource("ShaderMaterial_wjdwk")
layout_mode = 0
offset_left = -511.0
offset_top = 13.0
offset_right = -38.0
offset_bottom = 55.0
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 10
size_flags_vertical = 0
texture = ExtResource("6_mf0sy")
stretch_mode = 3

[node name="HBoxItems" type="HBoxContainer" parent="Overlay/VSections/Indicators/Menu/MenuContent"]
use_parent_material = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -404.0
offset_top = -18.0
offset_right = -46.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
size_flags_vertical = 0
alignment = 2

[node name="Inventory" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("5_ntnop")
flat = true
icon_alignment = 1
targetWindow = NodePath("../../../../../../../Windows/Floating/Inventory")
targetShortcut = &"ui_inventory"

[node name="Skill" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("13_h6wc7")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Skill")
targetShortcut = &"ui_skill"

[node name="Emote" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("8_ppxwt")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Emote")
targetShortcut = &"ui_emote"

[node name="Chat" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("6_2quic")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Chat")
targetShortcut = &"ui_chat"

[node name="Minimap" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("7_cv35r")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Minimap")
targetShortcut = &"ui_minimap"

[node name="Progress" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("9_vtuwx")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Progress")
targetShortcut = &"ui_progress"

[node name="Credits" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("10_mq57a")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Credit")
targetShortcut = &"ui_credits"

[node name="Settings" parent="Overlay/VSections/Indicators/Menu/MenuContent/HBoxItems" node_paths=PackedStringArray("targetWindow") instance=ExtResource("3_sl5jl")]
use_parent_material = true
layout_mode = 2
icon = ExtResource("11_17vy0")
flat = true
targetWindow = NodePath("../../../../../../../Windows/Floating/Settings")
targetShortcut = &"ui_settings"

[node name="MenuButton" type="Button" parent="Overlay/VSections/Indicators/Menu"]
custom_minimum_size = Vector2(62, 61)
layout_direction = 3
layout_mode = 0
offset_right = 62.0
offset_bottom = 61.0
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_styles/normal = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w48pk")
theme_override_styles/hover = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/disabled = SubResource("StyleBoxTexture_hg7ie")
theme_override_styles/focus = SubResource("StyleBoxTexture_hg7ie")

[node name="Contexts" type="Control" parent="Overlay/VSections"]
z_index = 10
z_as_relative = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="Loading" parent="Overlay/VSections/Contexts" instance=ExtResource("22_cg00p")]
visible = false
layout_mode = 1
mouse_filter = 2

[node name="Info" parent="Overlay/VSections/Contexts" instance=ExtResource("20_px3po")]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
grow_vertical = 2
size_flags_vertical = 6
mouse_filter = 1
theme_type_variation = &"PanelSideLeft"
persistant = false

[node name="Dialogue" parent="Overlay/VSections/Contexts" instance=ExtResource("24_fqnq4")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -338.0
offset_top = -364.0
offset_right = 338.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0

[node name="Login" parent="Overlay/VSections/Contexts" instance=ExtResource("7_lrq68")]
visible = false
layout_mode = 1
offset_left = -146.0
offset_right = 146.0

[node name="Character" parent="Overlay/VSections/Contexts" instance=ExtResource("49_78q3w")]
visible = false
layout_mode = 1

[node name="MessageBox" parent="Overlay/VSections/Contexts" instance=ExtResource("25_tem4r")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -44.5
offset_right = 275.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonBar" type="Control" parent="Overlay/VSections"]
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
mouse_filter = 1

[node name="ButtonBoxes" parent="Overlay/VSections/ButtonBar" instance=ExtResource("26_plhfr")]
visible = false
layout_mode = 1
offset_bottom = 24.0

[node name="ActionBoxes" parent="Overlay/VSections/ButtonBar" instance=ExtResource("4")]
visible = false
custom_minimum_size = Vector2(422, 0)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -211.0
offset_right = 211.0
offset_bottom = 0.0
grow_vertical = 1
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Sections" type="Control" parent="Overlay"]
layout_mode = 2
mouse_filter = 2

[node name="Shortcuts" type="MarginContainer" parent="Overlay/Sections"]
custom_minimum_size = Vector2(0, 155)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="Sticks" type="HBoxContainer" parent="Overlay/Sections/Shortcuts"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("18_6nrx4")

[node name="LeftAnchor" type="Control" parent="Overlay/Sections/Shortcuts/Sticks"]
layout_mode = 2
size_flags_horizontal = 2

[node name="ButtonLeft" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/LeftAnchor"]
visible = false
position = Vector2(4, -50)
texture_normal = ExtResource("28_k5lnh")
texture_pressed = ExtResource("29_5sssi")

[node name="Direction" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/LeftAnchor"]
visible = false
texture_normal = ExtResource("18_lb78w")

[node name="Button" type="TextureRect" parent="Overlay/Sections/Shortcuts/Sticks/LeftAnchor/Direction"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -25.5
offset_right = 26.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-26, -26)
mouse_filter = 2
theme = ExtResource("4_wx5hs")
theme_type_variation = &"FilledLosangeButton"
texture = ExtResource("20_1vdgt")

[node name="RightAnchor" type="Control" parent="Overlay/Sections/Shortcuts/Sticks"]
layout_mode = 2

[node name="ButtonRight" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/RightAnchor"]
visible = false
position = Vector2(-57, -50)
texture_normal = ExtResource("30_gfxfv")
texture_pressed = ExtResource("31_udatq")

[node name="Actions" type="TextureRect" parent="Overlay/Sections/Shortcuts/Sticks/RightAnchor"]
visible = false
layout_direction = 3
layout_mode = 0
offset_right = 155.0
offset_bottom = 155.0
size_flags_horizontal = 10
texture = ExtResource("18_lb78w")

[node name="ButtonY" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions"]
position = Vector2(51, 5)
texture_normal = ExtResource("22_v5bsw")
texture_pressed = ExtResource("23_veq0v")

[node name="ButtonX" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions"]
position = Vector2(4, 52)
texture_normal = ExtResource("23_8ulos")
texture_pressed = ExtResource("25_8t8bb")

[node name="ButtonB" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions"]
position = Vector2(98, 52)
texture_normal = ExtResource("24_idf5b")
texture_pressed = ExtResource("27_rgxqc")

[node name="ButtonA" type="TouchScreenButton" parent="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions"]
position = Vector2(51, 99)
texture_normal = ExtResource("25_6cklw")
texture_pressed = ExtResource("29_ioa8a")

[node name="Windows" type="MarginContainer" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4_wx5hs")
theme_override_constants/margin_top = 80

[node name="Floating" type="Control" parent="Windows"]
layout_mode = 2
mouse_filter = 2
script = ExtResource("7")

[node name="Quit" parent="Windows/Floating" instance=ExtResource("8")]
visible = false
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -60.0
offset_right = 145.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="Inventory" parent="Windows/Floating" instance=ExtResource("35_j05ha")]
visible = false
show_behind_parent = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 973.0
offset_top = 135.0
offset_right = 1255.0
offset_bottom = 404.0
grow_horizontal = 1
grow_vertical = 1
saveOverlayState = true
allowAutomaticResize = true

[node name="Minimap" parent="Windows/Floating" instance=ExtResource("9_myjuo")]
visible = false
custom_minimum_size = Vector2(200, 125)
layout_mode = 0
offset_left = 1058.0
offset_top = 6.0
offset_right = 1258.0
offset_bottom = 131.0
saveOverlayState = true

[node name="Emote" parent="Windows/Floating" instance=ExtResource("37_v7lrk")]
visible = false
custom_minimum_size = Vector2(38, 38)
layout_mode = 0
offset_left = 68.0
offset_top = 25.0
offset_right = 306.0
offset_bottom = 68.0
saveOverlayState = true

[node name="Skill" parent="Windows/Floating" instance=ExtResource("38_ompay")]
layout_mode = 0
offset_left = 0.0
offset_top = 71.0
offset_right = 213.0
offset_bottom = 114.0
saveOverlayState = true

[node name="Chat" parent="Windows/Floating" instance=ExtResource("5")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 22.0
offset_top = 433.0
offset_right = 420.0
offset_bottom = 622.0
grow_horizontal = 1
grow_vertical = 1
saveOverlayState = true
allowAutomaticResize = true

[node name="Credit" parent="Windows/Floating" instance=ExtResource("14_xidsc")]
visible = false
layout_mode = 0
offset_left = 23.0
offset_top = 85.0
offset_right = 483.0
offset_bottom = 545.0
jsonFile = ExtResource("16_pfh0e")

[node name="Settings" parent="Windows/Floating" instance=ExtResource("16_gapih")]
visible = false
layout_mode = 1
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 446.0
offset_top = 176.0
offset_right = 764.0
offset_bottom = 486.0
grow_horizontal = 1
grow_vertical = 1

[node name="Progress" parent="Windows/Floating" instance=ExtResource("54_112vu")]
visible = false
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 318.0
offset_bottom = 310.0
script = ExtResource("19_v8wo4")

[node name="Respawn" parent="Windows/Floating" instance=ExtResource("44_7o5pa")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 280.0
offset_bottom = 80.0
grow_horizontal = 1
grow_vertical = 1

[node name="Stat" parent="Windows/Floating" instance=ExtResource("35_d1kq3")]
visible = false
layout_mode = 0
offset_left = 439.0
offset_top = 46.0
offset_right = 839.0
offset_bottom = 427.0
saveOverlayState = true

[node name="Shaders" type="CanvasLayer" parent="."]
layer = 128

[node name="HQ4x" parent="Shaders" instance=ExtResource("10_id8es")]
visible = false
offset_right = 39.0

[node name="CRT" parent="Shaders" instance=ExtResource("11_x7rk2")]
top_level = true

[connection signal="resized" from="Overlay" to="." method="_on_ui_margin_resized"]
[connection signal="pressed" from="Overlay/VSections/Indicators/Stat/StatButton" to="Overlay/VSections/Indicators/Stat" method="_on_button_pressed"]
[connection signal="pressed" from="Overlay/VSections/Indicators/Menu/MenuButton" to="Overlay/VSections/Indicators/Menu" method="_on_button_pressed"]
[connection signal="visibility_changed" from="Overlay/VSections/Contexts/Character" to="Overlay/VSections/Contexts/Character" method="_on_visibility_changed"]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/LeftAnchor/ButtonLeft" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [9]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/LeftAnchor/ButtonLeft" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [9]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/LeftAnchor/Direction" to="Overlay/Sections/Shortcuts/Sticks" method="_on_direction_button_down"]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/LeftAnchor/Direction" to="Overlay/Sections/Shortcuts/Sticks" method="_on_direction_button_up"]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/ButtonRight" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [10]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/ButtonRight" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [10]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonY" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [3]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonY" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [3]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonX" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [2]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonX" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [2]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonB" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [1]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonB" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [1]]
[connection signal="pressed" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonA" to="Overlay/Sections/Shortcuts/Sticks" method="_press_button" binds= [0]]
[connection signal="released" from="Overlay/Sections/Shortcuts/Sticks/RightAnchor/Actions/ButtonA" to="Overlay/Sections/Shortcuts/Sticks" method="_release_button" binds= [0]]
[connection signal="resized" from="Windows/Floating" to="Windows/Floating" method="_on_window_resized"]
[connection signal="gui_input" from="Windows/Floating/Respawn" to="Windows/Floating/Respawn" method="OnGuiInput"]
[connection signal="gui_input" from="Windows/Floating/Stat" to="Windows/Floating/Stat" method="OnGuiInput"]
